--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.3",
         "laravel/framework": "^12.0",
+        "laravel/prompts": "^0.3.6",
         "laravel/tinker": "^2.10.1"
     },
     "require-dev": {
