docs: add README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
             - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
         networks:
             - laravel
-        command: php artisan list  # default command shows artisan commands
+        command: php artisan generate-report  # default command to run when the container starts
 
     # Test Runner
     test:
